--- a/src/scss/components/common/_article-message.scss
+++ b/src/scss/components/common/_article-message.scss
@@ -3,8 +3,10 @@
 .article-message {
   border: 1px solid $pale-gray;
   padding: 50px;
+  margin-bottom: 80px;
   @include mq-sp {
     padding: 40px;
+    margin-bottom: 30px;
   }
   &__title {
     @include heading-s--pc;
