--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,3 +15,4 @@
 @import "./components/common/article-image";
 @import "./components/common/article-accent-image";
 @import "./components/common/article-quote";
+@import "./components/common/garden-link-box";
