--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,3 +16,4 @@
 @import "./components/common/article-accent-image";
 @import "./components/common/article-quote";
 @import "./components/common/garden-link-box";
+@import "./components/common/text-link-box";
