--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,3 +17,4 @@
 @import "./components/common/article-quote";
 @import "./components/common/garden-link-box";
 @import "./components/common/text-link-box";
+@import "./components/common/anker-link-box";
