--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,3 +18,4 @@
 @import "./components/common/garden-link-box";
 @import "./components/common/text-link-box";
 @import "./components/common/anker-link-box";
+@import "./components/common/list-link-box";
