--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,4 @@
 @import "./components/common/text-link-box";
 @import "./components/common/anker-link-box";
 @import "./components/common/list-link-box";
+@import "./components/common/product-link-box";
