--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,3 +20,4 @@
 @import "./components/common/anker-link-box";
 @import "./components/common/list-link-box";
 @import "./components/common/product-link-box";
+@import "./components/common/contents-link-box";
