--- a/src/scss/components/common/_anker-link-box.scss
+++ b/src/scss/components/common/_anker-link-box.scss
@@ -11,6 +11,7 @@
   @include mq-sp {
     width: 100%;
     margin-bottom: 45px;
+    padding: 25px 30px;
     @include text-inner--sp;
   }
   &__list-wrapper {
