--- a/src/scss/components/common/_text-link-box.scss
+++ b/src/scss/components/common/_text-link-box.scss
@@ -15,24 +15,27 @@
     padding: 50px;
     margin-bottom: 25px;
     @include mq-sp {
-      width : calc(100% / 2 - 10px);
-      margin-right: 20px;
-      padding: 40px 30px 30px 30px;
-      &:nth-child(2n) {
-        margin-right: 0px;
-      }
-    }
-    &:nth-child(3n) {
+      width: 100%;
       margin-right: 0px;
-      @include mq-sp {
-        margin-right: 20px;
-      }
-    }
-    &:nth-child(6n) {
-      margin-right: 0px;
-      @include mq-sp {
-        margin-right: 0px;
-      }
+      padding: 40px;
+    //   width : calc(100% / 2 - 10px);
+    //   margin-right: 20px;
+    //   padding: 40px 30px 30px 30px;
+    //   &:nth-child(2n) {
+    //     margin-right: 0px;
+    //   }
+    // }
+    // &:nth-child(3n) {
+    //   margin-right: 0px;
+    //   @include mq-sp {
+    //     margin-right: 20px;
+    //   }
+    // }
+    // &:nth-child(6n) {
+    //   margin-right: 0px;
+    //   @include mq-sp {
+    //     margin-right: 0px;
+    //   }
     }
   }
   &__article-title {
@@ -42,10 +45,9 @@
     a {
       text-decoration: underline;
       color: $dark-green;
+      transition:.1s;
       &:hover {
-        text-decoration: none;
-        color: #fff;
-        transition:3s;
+        text-decoration: underline transparent;
       }
     }
     @include mq-sp {
