fix｜text-link-box｜PC版で2カラムになるバグを修正

--- a/src/scss/components/common/_text-link-box.scss
+++ b/src/scss/components/common/_text-link-box.scss
@@ -18,24 +18,24 @@
       width: 100%;
       margin-right: 0px;
       padding: 40px;
-    //   width : calc(100% / 2 - 10px);
-    //   margin-right: 20px;
-    //   padding: 40px 30px 30px 30px;
-    //   &:nth-child(2n) {
-    //     margin-right: 0px;
-    //   }
-    // }
-    // &:nth-child(3n) {
-    //   margin-right: 0px;
-    //   @include mq-sp {
-    //     margin-right: 20px;
-    //   }
-    // }
-    // &:nth-child(6n) {
-    //   margin-right: 0px;
-    //   @include mq-sp {
-    //     margin-right: 0px;
-    //   }
+      // width : calc(100% / 2 - 10px);
+      // margin-right: 20px;
+      // padding: 40px 30px 30px 30px;
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+    }
+    &:nth-child(3n) {
+      margin-right: 0px;
+      // @include mq-sp {
+      //   margin-right: 20px;
+      // }
+    }
+    &:nth-child(6n) {
+      margin-right: 0px;
+      @include mq-sp {
+        margin-right: 0px;
+      }
     }
   }
   &__article-title {
