--- a/src/scss/components/common/_anker-link-box.scss
+++ b/src/scss/components/common/_anker-link-box.scss
@@ -9,7 +9,7 @@
   margin-bottom: 80px;
   @include mq-sp {
     width: 100%;
-    padding: 40px;
+    padding: 30px;
   }
   &__list {
     margin-right: 18px;
@@ -25,6 +25,9 @@
       right: 0;
       top: 50%;
       margin-top: -6px;
+      @include mq-sp {
+        margin-top: -29px;
+      }
     }
   }
   &__link-text {
@@ -32,7 +35,6 @@
     @include mq-sp {
       width: 100%;
       margin-bottom: 45px;
-      padding: 25px 30px;
       @include text-inner--sp;
     }
     a {
