fix｜xxx-link-box｜SP版のmargin-bottomを修正

--- a/src/scss/components/common/_people-link-box.scss
+++ b/src/scss/components/common/_people-link-box.scss
@@ -6,6 +6,7 @@
   margin-bottom: 80px;
   @include mq-sp {
     width: 100%;
+    margin-bottom: 30px;
   }
   &__wrapper {
     width: calc(100% / 3 - 50px / 3);
