add｜rayouts.scss｜全体Layoutのscssを新規作成

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,3 +21,4 @@
 @import "./components/common/list-link-box";
 @import "./components/common/product-link-box";
 @import "./components/common/contents-link-box";
+@import "./pages/common/rayouts";
