add｜header.scss｜ロゴ等追加

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,4 +21,5 @@
 @import "./components/common/list-link-box";
 @import "./components/common/product-link-box";
 @import "./components/common/contents-link-box";
-@import "./pages/common/rayouts";
+@import "./components/parts/rayouts";
+@import "./components/common/header";
