--- a/src/scss/components/common/_header.scss
+++ b/src/scss/components/common/_header.scss
@@ -1,5 +1,31 @@
 @charset "utf-8";
 
 .header {
-  color: #000;
+  &__site-logo {
+    position: fixed;
+    top: 20px;
+    left: 25px;
+    width: 65px;
+    z-index: 100;
+    img {
+      width: 100%;
+    }
+  }
+  &__menu {
+    position: fixed;
+    top: 20px;
+    right: 25px;
+    width: 30px;
+    z-index: 100;
+  }
+  &__shopping-bag {
+    position: fixed;
+    top: 100px;
+    right: 31px;
+    width: 30px;
+    z-index: 100;
+    img {
+      width: 100%;
+    }
+  }
 }
