--- a/src/scss/components/common/_drawer.scss
+++ b/src/scss/components/common/_drawer.scss
@@ -1,27 +1,6 @@
 @charset "utf-8";
 
-.site-logo {
-  position: fixed;
-  top: 20px;
-  left: 25px;
-  width: 65px;
-  z-index: 100;
-  img {
-    width: 100%;
-  }
-}
-.shopping-bag {
-  position: fixed;
-  top: 100px;
-  right: 31px;
-  width: 30px;
-  z-index: 1;
-  img {
-    width: 100%;
-  }
-}
-/*ドロワー*/
-.l-drawer {
+.drawer {
   position: relative;
   // inputのcheckboxは非表示
   &__checkbox{
@@ -102,28 +81,28 @@
   // チェックが入ったら（アイコンクリックしたら）
   &__checkbox:checked ~ {
     // ハンバーガーアイコン
-    .l-drawer__icon{
-      .l-drawer__icon-parts{
+    .drawer__icon{
+      .drawer__icon-parts{
         background: transparent;
       }
-      .l-drawer__icon-parts:before{
+      .drawer__icon-parts:before{
         -webkit-transform: rotate(-45deg);
         transform: rotate(-45deg);
         top: 0;
       }
-      .l-drawer__icon-parts:after{
+      .drawer__icon-parts:after{
         -webkit-transform: rotate(45deg);
         transform: rotate(45deg);
         top: 0;
       }
     }
     // メインエリアを暗くする
-    .l-drawer__overlay {
+    .drawer__overlay {
       opacity: 0.3;
       pointer-events: auto; //ポインタの動作デフォルトに戻す
     }
     // メニューをだす
-    .l-drawer__menu {
+    .drawer__menu {
       right: 0;
     }
   }
