--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,3 +24,4 @@
 @import "./components/parts/rayouts";
 @import "./components/common/header";
 @import "./components/common/drawer";
+@import "./components/common/aside";
