add｜footer.scss｜エリア追加

--- a/src/scss/components/parts/_rayouts.scss
+++ b/src/scss/components/parts/_rayouts.scss
@@ -1,11 +1,16 @@
 @charset "utf-8";
 
-.contents {
+.contents-wrapper {
   width: calc(100% - 90px);
   border-right: 1px solid $pale-gray;
   @include mq-sp {
+    width: 100%;
+    border-right: none;
+  }
+}
+.contents {
+  @include mq-sp {
     width: calc(100% - 40px);
     margin: 0px 20px 0px 20px;
-    border-right: none;
   }
 }
