--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,3 +25,4 @@
 @import "./components/common/header";
 @import "./components/common/drawer";
 @import "./components/common/aside";
+@import "./components/common/footer";
