--- a/src/scss/components/common/_footer.scss
+++ b/src/scss/components/common/_footer.scss
@@ -3,4 +3,74 @@
 .footer {
   background-color: $dark-green;
   padding: 150px 170px;
+  @include mq-sp {
+    padding: 60px 60px 50px 60px;
+  }
+  &__copyright {
+    position: fixed;
+    top: 25vh;
+    right: 40px;
+    writing-mode: vertical-rl;
+    font-family: TsukuMinPr6-LB;
+    font-size: 10px;
+    font-weight: normal;
+    color: $dark-green;
+    letter-spacing: 1px;
+    @include mq-sp {
+      position: static;
+      writing-mode: horizontal-tb;
+      font-size: 7px;
+      color: #fff;
+      letter-spacing: 0px;
+      text-align: center;
+    }
+  }
+  &__pagetop {
+    position: fixed;
+    bottom: 40px;
+    right: 30px;
+    writing-mode: vertical-rl;
+    font-family: TsukuMinPr6-LB;
+    font-size: 10px;
+    font-weight: normal;
+    color: $dark-green;
+    letter-spacing: 1px;
+    &::before {
+      width: 30px;
+      height: 30px;
+      margin-bottom: 5px;
+      content: '';
+      display: inline-block;
+      background: url(../images/common/icn_arrow.svg);
+      background-size: cover;
+      transform: rotate(-90deg);
+    }
+    a {
+      text-decoration: none;
+      color: $dark-green;
+    }
+    @include mq-sp {
+      display: none;
+    }
+  }
+  &__social-box {
+    position: fixed;
+    bottom: 150px;
+    right: 36px;
+    @include mq-sp {
+      position: static;
+      display: flex;
+      justify-content: space-between;
+      width: 50%;
+      margin: 0 auto;
+    }
+  }
+  &__social-icon {
+    margin-bottom: 10px;
+    width: 17px;
+    display: block;
+    @include mq-sp {
+      fill: #fff;
+    }
+  }
 }
