add｜index-title、detail-title｜PC版新規追加

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,3 +25,5 @@
 @import "./components/common/header";
 @import "./components/common/drawer";
 @import "./components/common/footer";
+@import "./components/common/index-title";
+@import "./components/common/detail-title";
