--- a/src/scss/components/common/_detail-title.scss
+++ b/src/scss/components/common/_detail-title.scss
@@ -2,14 +2,25 @@
 
 .detail-title {
   margin-bottom: 100px;
+  @include mq-sp {
+    margin-bottom: 50px;
+  }
   &__category-title {
     @include heading-s--pc;
     padding: 50px 50px 50px 0px;
     border-right: 1px solid $dark-green;
     text-align: right;
+    @include mq-sp {
+      display: none;
+    }
   }
   &__heading {
     @include heading-l--pc;
     margin-bottom: 25px;
+    @include mq-sp {
+      @include heading-l--sp;
+      padding: 5px 0px 5px 20px;
+      border-left: 1px solid $dark-green;
+    }
   }
 }
