--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,3 +27,4 @@
 @import "./components/common/footer";
 @import "./components/common/index-title";
 @import "./components/common/detail-title";
+@import "./components/common/people-title";
