--- a/src/scss/components/common/_index-title.scss
+++ b/src/scss/components/common/_index-title.scss
@@ -16,6 +16,17 @@
     @include mq-sp {
       @include heading-xl--sp;
       margin-bottom: 0px;
+      position: relative;
+      &::before {
+        content: '';
+        display: inline-block;
+        width: 40px;
+        height: 1px;
+        background: $dark-green;
+        position: absolute;
+        top: 50%;
+        left: -20px;
+      }
     }
   }
   &__sumally {
