--- a/src/scss/components/common/_article-left-image.scss
+++ b/src/scss/components/common/_article-left-image.scss
@@ -4,6 +4,12 @@
   display: flex;
   align-items: flex-start;
   margin-bottom: 80px;
+  + p {
+    margin-top: -40px;
+  }
+  + .article-heading {
+    margin-top: 100px;
+  }
   @include mq-sp {
     display: block;
     margin-bottom: 30px;
