--- a/src/scss/components/common/_article-right-image.scss
+++ b/src/scss/components/common/_article-right-image.scss
@@ -3,6 +3,12 @@
 .article-right-image {
   display: flex;
   margin-bottom: 80px;
+  + p {
+    margin-top: -40px;
+  }
+  + .article-heading {
+    margin-top: 100px;
+  }
   @include mq-sp {
     display: block;
     margin-bottom: 30px;
