--- a/src/scss/components/common/_article-text.scss
+++ b/src/scss/components/common/_article-text.scss
@@ -3,6 +3,12 @@
 .article-text {
   @include text-normal--pc;
   margin-bottom: 80px;
+  + p {
+    margin-top: -40px;
+  }
+  + .article-heading {
+    margin-top: 100px;
+  }
   @include mq-sp {
     @include text-normal--sp;
     margin-bottom: 30px;
