--- a/src/scss/components/common/_garden-link-box.scss
+++ b/src/scss/components/common/_garden-link-box.scss
@@ -1,15 +1,20 @@
 @charset "utf-8";
 
 .garden-link-box {
-  display: flex;
-  flex-wrap: wrap;
-  width: calc(#{$pc-grid} * 8 + #{$pc-gutter} * 7);
   margin-bottom: 80px;
   @include mq-sp {
     width: 100%;
     margin-bottom: 30px;
   }
+  &__area-title {
+    @include heading-m--pc;
+    margin-bottom: 75px;
+  }
   &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__list-wrapper {
     width: calc(100% / 3 - 50px / 3);
     margin-right: 25px;
     @include mq-sp {
