--- a/src/scss/components/common/_product-link-box.scss
+++ b/src/scss/components/common/_product-link-box.scss
@@ -8,15 +8,19 @@
   }
   &__area-title {
     @include heading-m--pc;
-    margin-bottom: 75px;
+    margin-bottom: 80px;
+    @include mq-sp {
+      @include heading-m--sp;
+      margin-bottom: 40px;
+    }
   }
   &__wrapper {
     display: flex;
     flex-wrap: wrap;
   }
   &__list-wrapper {
-    width: calc(100% / 3 - 50px / 3);
-    margin-right: 25px;
+    width: calc(100% / 4 - 60px / 4);
+    margin-right: 20px;
     @include mq-sp {
       width: calc(100% / 2 - 10px);
       margin-right: 20px;
@@ -24,17 +28,8 @@
         margin-right: 0px;
       }
     }
-    &:nth-child(3n) {
+    &:nth-child(4n) {
       margin-right: 0px;
-      @include mq-sp {
-        margin-right: 20px;
-      }
-    }
-    &:nth-child(6n) {
-      margin-right: 0px;
-      @include mq-sp {
-        margin-right: 0px;
-      }
     }
   }
   &__link-wrapper {
