update｜xxx-link-box｜ライン追加

--- a/src/scss/components/common/_garden-link-box.scss
+++ b/src/scss/components/common/_garden-link-box.scss
@@ -9,6 +9,7 @@
   &__area-title {
     @include heading-m--pc;
     margin-bottom: 80px;
+    padding-top: 150px;
     @include mq-sp {
       @include heading-m--sp;
       margin-bottom: 40px;
