--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,3 +29,5 @@
 @import "./components/common/detail-title";
 @import "./components/common/people-title";
 @import "./components/common/pickup-title";
+@import "./components/common/contents";
+@import "./components/common/aside";
