--- a/src/scss/components/parts/_rayouts.scss
+++ b/src/scss/components/parts/_rayouts.scss
@@ -1,16 +1,10 @@
 @charset "utf-8";
 
-.contents-wrapper {
-  width: calc(100% - 90px);
-  border-right: 1px solid $pale-gray;
-  @include mq-sp {
-    width: 100%;
-    border-right: none;
-  }
-}
-.contents {
-  @include mq-sp {
-    width: calc(100% - 40px);
-    margin: 0px 20px 0px 20px;
-  }
-}
+// .contents {
+//   width: calc(100% - 90px);
+//   border-right: 1px solid $pale-gray;
+//   @include mq-sp {
+//     width: 100%;
+//     border-right: none;
+//   }
+// }
