--- a/src/scss/components/common/_article-right-image.scss
+++ b/src/scss/components/common/_article-right-image.scss
@@ -5,9 +5,15 @@
   margin-bottom: 80px;
   + p {
     margin-top: -40px;
+    @include mq-sp {
+      margin-top: 0px;
+    }
   }
   + .article-heading {
     margin-top: 100px;
+    @include mq-sp {
+      margin-top: 60px;
+    }
   }
   @include mq-sp {
     display: block;
@@ -37,5 +43,19 @@
   }
   &__image-m {
     width: 100%;
+    margin-bottom: 20px;
+  }
+  &__image-s-box {
+    display: flex;
+    width: 100%;
+    @include mq-sp {
+      margin-bottom: 30px;
+    }
+  }
+  &__image-s {
+    width: calc(50% - 10px);
+    &:first-child {
+      margin-right: 20px;
+    }
   }
 }
