--- a/src/scss/components/common/_article-text.scss
+++ b/src/scss/components/common/_article-text.scss
@@ -5,9 +5,15 @@
   margin-bottom: 80px;
   + p {
     margin-top: -40px;
+    @include mq-sp {
+      margin-top: 0px;
+    }
   }
   + .article-heading {
     margin-top: 100px;
+    @include mq-sp {
+      margin-top: 60px;
+    }
   }
   @include mq-sp {
     @include text-normal--sp;
