fix｜article-xxx-image｜__textのpにmargin-bottom追加

--- a/src/scss/components/common/_article-left-image.scss
+++ b/src/scss/components/common/_article-left-image.scss
@@ -55,9 +55,11 @@
   }
   &__text {
     width: 100%;
+    margin-bottom: 40px;
     @include text-normal--pc;
     @include mq-sp {
       @include text-normal--sp;
+      margin-bottom: 30px;
     }
   }
 }
