fix｜xxx-link-box｜SP時のライン上下のマージン調整

--- a/src/scss/components/common/_contents.scss
+++ b/src/scss/components/common/_contents.scss
@@ -10,22 +10,10 @@
   &__article-wrapper {
     position: relative;
     padding-bottom: 80px;
-    &::before {
-      content: '';
-      position: absolute;
-      left: 50%;
-      display: inline-block;
-      width: 83%;
-      height: 1px; /*下線の太さ*/
-      -moz-transform: translateX(-50%);
-      -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-      transform: translate(-50%); /*位置調整*/
-      background-color: $pale-gray;
-    }
     @include mq-sp {
       width: calc(100% - 40px);
       margin: 0px 20px 0px 20px;
+      padding-bottom: 50px;
     }
   }
 }
