--- a/src/scss/components/common/_aside.scss
+++ b/src/scss/components/common/_aside.scss
@@ -19,7 +19,10 @@
       -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
       transform: translate(-50%); /*位置調整*/
-      background-color: $pale-gray
+      background-color: $pale-gray;
+      @include mq-sp {
+        width: 100%;
+      }
     }
   }
 }
