--- a/src/scss/components/common/_contents-link-box.scss
+++ b/src/scss/components/common/_contents-link-box.scss
@@ -5,6 +5,7 @@
   padding-top: 150px;
   @include mq-sp {
     margin-bottom: 30px;
+    padding-top: 60px;
   }
   &__wrapper {
     display: flex;
