--- a/src/scss/components/common/_product-link-box.scss
+++ b/src/scss/components/common/_product-link-box.scss
@@ -13,6 +13,7 @@
     @include mq-sp {
       @include heading-m--sp;
       margin-bottom: 40px;
+      padding-top: 60px;
     }
   }
   &__wrapper {
