--- a/src/scss/components/common/_contents-link-box.scss
+++ b/src/scss/components/common/_contents-link-box.scss
@@ -16,6 +16,17 @@
       width: 100%;
     }
   }
+  &__box-wrapper {
+    width: calc(100% / 2 - 20px);
+    margin-right: 20px;
+    @include mq-sp {
+      width: 100%;
+      margin-right: 0px;
+    }
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
+  }
   &__images-wrapper {
     margin-bottom: 15px;
     position: relative;
@@ -33,6 +44,7 @@
     transform: translate(-50%,-50%);
     margin:0;
     padding:0;
+    z-index: 1;
     @include mq-sp {
       @include heading-m--sp;
       color: #fff;
@@ -41,12 +53,6 @@
   &__contents-images {
     width: 100%;
     opacity: 0.5;
-  }
-  &__sumally-wrapper {
-    padding: 0px 20px;
-    @include mq-sp {
-      padding: 0px;
-    }
   }
   &__contents-sumally {
     @include text-inner--pc;
