--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -7,6 +7,8 @@
     font-weight: normal;
     line-height: 1.56;
     color: $dark-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.2em;
 }
 @mixin heading-m--pc {
     font-family: TsukuMinPr6-LB;
@@ -14,6 +16,8 @@
     font-weight: normal;
     line-height: 1.67;
     color: $dark-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.2em;
 }
 @mixin heading-s--pc {
     font-family: TsukuMinPr6-LB;
@@ -21,6 +25,8 @@
     font-weight: normal;
     line-height: 1.67;
     color: $dark-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.2em;
 }
 @mixin text-normal--pc {
     font-family: NotoSans;
@@ -28,6 +34,8 @@
     font-weight: normal;
     line-height: 2.81;
     color: $bon-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.125em;
 }
 @mixin text-inner--pc {
     font-family: NotoSans;
@@ -35,6 +43,8 @@
     font-weight: normal;
     line-height: 2.14;
     color: $bon-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.125em;
 }
 @mixin text-small--pc {
     font-family: NotoSans;
@@ -42,6 +52,8 @@
     font-weight: normal;
     line-height: 1.67;
     color: $bon-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.125em;
 }
 //SP用テキスト
 @mixin heading-xl--sp {
@@ -50,6 +62,8 @@
     font-weight: normal;
     line-height: 1.21;
     color: $dark-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.2em;
 }
 @mixin heading-l--sp {
     font-family: TsukuMinPr6-LB;
@@ -57,6 +71,8 @@
     font-weight: normal;
     line-height: 1.46;
     color: $dark-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.2em;
 }
 
 @mixin heading-m--sp {
@@ -65,6 +81,8 @@
     font-weight: normal;
     line-height: 1.75;
     color: $dark-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.2em;
 }
 @mixin heading-s--sp {
     font-family: TsukuMinPr6-LB;
@@ -72,6 +90,8 @@
     font-weight: normal;
     line-height: 1.64;
     color: $dark-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.2em;
 }
 @mixin text-normal--sp {
     font-family: NotoSans;
@@ -79,6 +99,8 @@
     font-weight: normal;
     line-height: 2.33;
     color: $bon-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.125em;
 }
 @mixin text-inner--sp {
     font-family: NotoSans;
@@ -86,6 +108,8 @@
     font-weight: normal;
     line-height: 2.31;
     color: $bon-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.125em;
 }
 @mixin text-small--sp {
     font-family: NotoSans;
@@ -93,6 +117,8 @@
     font-weight: normal;
     line-height: 1.5;
     color: $bon-green;
+    font-feature-settings: "palt";
+    letter-spacing: 0.125em;
 }
 //media-query
 @mixin mq-sp($max: $sp-max-width) {
