--- a/src/scss/components/common/_footer.scss
+++ b/src/scss/components/common/_footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   background-color: $dark-green;
-  padding: 150px 170px;
+  padding: 150px 9%;
   @include mq-sp {
     padding: 60px 60px 50px 60px;
   }
