--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "./base/mixins";
 @import "./base/reset";
 @import "./base/grid";
+@import "./base/fade-in";
 @import "./components/common/header";
 @import "./components/common/article-message";
 @import "./components/common/people-link-box";
@@ -25,6 +26,7 @@
 @import "./components/common/header";
 @import "./components/common/drawer";
 @import "./components/common/footer";
+@import "./components/common/footer-link-area";
 @import "./components/common/index-title";
 @import "./components/common/detail-title";
 @import "./components/common/people-title";
