--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,3 +33,4 @@
 @import "./components/common/pickup-title";
 @import "./components/common/contents";
 @import "./components/common/aside";
+@import "./components/common/breadcrumbs";
