--- a/src/scss/components/common/_aside.scss
+++ b/src/scss/components/common/_aside.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 .aside {
+  margin-bottom: 150px;
   @include mq-sp {
     width: calc(100% - 40px);
     margin: 0px 20px 0px 20px;
