update｜footer｜sp版を追加

--- a/src/scss/components/common/_footer-link-area.scss
+++ b/src/scss/components/common/_footer-link-area.scss
@@ -4,8 +4,20 @@
   display: flex;
   justify-content:space-between;
   border-bottom: 1px solid #8E9A9A;
+  @include mq-sp {
+    display: block;
+    padding-bottom: 45px;
+  }
   &__box-wrapper {
     margin-bottom: 100px;
+    @include mq-sp {
+      margin-bottom: 0px;
+    }
+    &:nth-child(n+2):nth-child(-n+5) {
+      @include mq-sp {
+        display: none;
+      }
+    }
   }
   &__main-menu {
     @include heading-s--pc;
@@ -18,6 +30,11 @@
       &:hover {
         text-decoration: underline transparent;
       }
+    }
+    @include mq-sp {
+      @include heading-s--sp;
+      font-size: 12px;
+      text-align: center;
     }
   }
   &__local-menu {
@@ -40,6 +57,14 @@
       &:hover {
         text-decoration: underline transparent;
       }
+    }
+    @include mq-sp {
+      display: none;
+    }
+  }
+  &__br--pc {
+    @include mq-sp {
+      display: none;
     }
   }
 }
