--- a/src/scss/components/common/_footer.scss
+++ b/src/scss/components/common/_footer.scss
@@ -13,6 +13,9 @@
     img {
       width: 80px;
       opacity: .8;
+      @include mq-sp {
+        width: 70px;
+      }
     }
     @include mq-sp {
       padding-bottom: 100px;
@@ -78,7 +81,7 @@
       width: 100%;
       margin: 0 auto;
       border-bottom: 1px solid #8E9A9A;
-      padding: 0px 100px 60px 100px;
+      padding: padding: 0 40px 60px 40px;;
       margin-bottom: 60px;
     }
   }
