--- a/src/scss/components/common/_footer.scss
+++ b/src/scss/components/common/_footer.scss
@@ -81,7 +81,7 @@
       width: 100%;
       margin: 0 auto;
       border-bottom: 1px solid #8E9A9A;
-      padding: padding: 0 40px 60px 40px;
+      padding: 0 40px 60px 40px;
       margin-bottom: 60px;
     }
   }
