fix｜header｜ロゴ周り調整

--- a/src/scss/components/common/_drawer.scss
+++ b/src/scss/components/common/_drawer.scss
@@ -4,7 +4,8 @@
   position: relative;
   @include mq-sp {
     position: absolute;
-    right: 15px;
+    right: 10px;
+    top: 6px;
   }
   // inputのcheckboxは非表示
   &__checkbox{
