--- a/src/scss/components/common/_breadcrumbs.scss
+++ b/src/scss/components/common/_breadcrumbs.scss
@@ -1,17 +1,20 @@
 @charset "utf-8";
 
 .breadcrumbs {
-  @include text-small--pc;
   margin-bottom: 30px;
-  a {
-    text-decoration: underline;
-    transition:.1s;
-    color: $bon-green;
-    &:hover {
-      text-decoration: underline transparent;
-    }
-  }
   @include mq-sp {
     display: none;
+  }
+  &__text {
+    @include text-small--pc;
+    text-align: center;
+    a {
+      text-decoration: underline;
+      transition:.1s;
+      color: $bon-green;
+      &:hover {
+        text-decoration: underline transparent;
+      }
+    }
   }
 }
