fix｜contents｜sp時の両サイドのマージン調整

--- a/src/scss/components/common/_contents-link-box.scss
+++ b/src/scss/components/common/_contents-link-box.scss
@@ -48,6 +48,7 @@
     @include mq-sp {
       @include heading-m--sp;
       color: #fff;
+      text-align: center;
     }
   }
   &__contents-images {
